[project]
name = "malicious-prompt-classifier"
version = "1.0.0"
description = "Классификация вредоносных текстовых запросов на основе анализа диалогового контекста с применением BERT-эмбеддингов и классических методов машинного обучения"
authors = [
    { name = "Davayan D. A.", email = "davayan@example.com" },
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "prompt-injection",
    "malicious-prompt-detection",
    "text-classification",
    "bert-embeddings",
    "machine-learning",
    "cybersecurity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "catboost>=1.2",
    "sentence-transformers>=2.2",
    "matplotlib>=3.7",
    "datasets>=2.14",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1",
    "pytest>=7.4",
    "ipython>=8.0",
]

[project.urls]
Homepage = "https://github.com/davayan/malicious-prompt-classifier"
Repository = "https://github.com/davayan/malicious-prompt-classifier"
"Bug Tracker" = "https://github.com/davayan/malicious-prompt-classifier/issues"

[project.scripts]
run-experiment = "experiment_v4:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["experiment_v4"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]
